force-app/main/default/objects/Game_Song__c/Game_Song__c.object-meta.xml
<CustomObject>
    <label>Game Song</label>
    <nameField>
        <label>Song Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Songs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>