force-app/main/default/objects/Game_Song__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <inlineHelpText>The artist or performer of the song</inlineHelpText>
    <label>Artist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>