force-app/main/default/objects/Game_Song__c/fields/Included_In_Game__c.field-meta.xml
<CustomField>
    <fullName>Included_In_Game__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Indicates whether this song is included in the bingo game</inlineHelpText>
    <label>Included in Game</label>
    <type>Checkbox</type>
</CustomField>