force-app/main/default/objects/Game_Song__c/fields/Spotify_URL__c.field-meta.xml
<CustomField>
    <fullName>Spotify_URL__c</fullName>
    <inlineHelpText>Spotify URL or link to the song</inlineHelpText>
    <label>Spotify URL</label>
    <type>Url</type>
</CustomField>