force-app/main/default/objects/Game_Song__c/listViews/All_Songs.listView-meta.xml
<ListView>
    <fullName>All_Songs</fullName>
    <columns>NAME</columns>
    <columns>Artist__c</columns>
    <columns>Included_In_Game__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Songs</label>
</ListView>